2015-10-06 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/uchar.h,
	  src/SDCCval.h,
	  src/SDCCval.c,
	  src/SDCC.lex,
	  src/SDCCutil.c,
	  src/SDCCmain.c,
	  src/SDCCglobl.h,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/charconst.c:
	  Wide character constants.

2015-10-02 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCval.c:
	  Loose the condition of warning 116.

2015-09-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/main.c:
	  Support "pragma codeseg" and "pragma constseg" in the stm8 port.

2015-09-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/main.c:
	  Support "--codeseg" and "--constseg" on the stm8 port.

2015-09-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_calloc.c,
	* device/lib/_free.c,
	* device/lib/_heap.c,
	* device/lib/_malloc.c,
	* device/lib/_realloc.c: renamed all _sdcc_* to __sdcc_*,
	  removed register keywords,
	  changed _sdcc_heap_size to __sdcc_last_memheader,
	  removed init_dynamic_memory() and other optimizations
	* support/regression/tests/malloc.c: added test for size overflow

2015-09-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-pr28982a.c:
	  Enabled for the r2k and r3ka ports.

2015-09-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c:
	  Fix bugs in genOr() and genXor() while operands are longlong.
	* support/regression/tests/longlong.c:
	  Enable more tests.

2015-09-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	* src/SDCCast.c:
	* src/SDCCerr.c:
	* src/SDCCicode.c:
	  Disable nested critical block / function call, support return in inline critical functions.
	* support/regression/tests/critical.c:
	  Improve test case.
	* support/regression/tests/malloc.c:
	  fix a small spot.

2015-09-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-14 Philipp Klaus Krause <pkk AT spth.de>
